--- a/com.kamotelabs.jersey/.settings/org.eclipse.wst.common.component
+++ b/com.kamotelabs.jersey/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="com.kamotelabs.jersey">
-        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+  <wb-module deploy-name="com.kamotelabs.jersey">
+    <property name="context-root" value="com.kamotelabs.jersey"/>
+    <wb-resource deploy-path="/" source-path="src/main/webapp"/>
+    <property name="java-output-path" value="/target/classes"/>
+    <wb-resource deploy-path="/WEB-INF/classes" source-path="src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/rest"/>
-        <property name="context-root" value="com.kamotelabs.jersey"/>
-        <property name="java-output-path" value="/com.kamotelabs.jersey/target/classes"/>
-    </wb-module>
+  </wb-module>
 </project-modules>
